2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Database/DatabaseType.cs: database type
	  caches compilation unit.

2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.CodeGeneration,
	  MonoDevelop.Projects.Dom.CodeGeneration/CodeRefactorer.cs,
	  MonoDevelop.Projects.Dom.CodeGeneration/ICodeGenerator.cs,
	  MonoDevelop.Projects.Dom.Parser/DatabaseProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/IParser.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/IResolver.cs,
	  MonoDevelop.Projects.Dom.Output/Ambience.cs,
	  MonoDevelop.Projects.Dom.Output/AmbienceService.cs,
	  MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomCecilParameter.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomCecilField.cs,
	  MonoDevelop.Projects.Dom/DomCecilProperty.cs,
	  MonoDevelop.Projects.Dom/PreProcessorDefine.cs,
	  MonoDevelop.Projects.Dom/IDocumentMetainformation.cs,
	  MonoDevelop.Projects.Dom/IAttribute.cs,
	  MonoDevelop.Projects.Dom/NamespaceEntry.cs,
	  MonoDevelop.Projects.Dom/CompilationUnit.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/ICompilationUnit.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/IExpressionFinder.cs,
	  MonoDevelop.Projects.Dom/FileEntry.cs,
	  MonoDevelop.Projects.Dom/DomLocation.cs,
	  MonoDevelop.Projects.Dom/ProjectCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomCecilMethod.cs,
	  MonoDevelop.Projects.Dom/IMember.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DomRegion.cs,
	  MonoDevelop.Projects.Dom/DomUsing.cs,